--- a/book/value_refs.bib
+++ b/book/value_refs.bib
@@ -17,6 +17,16 @@
   publisher={Springer}
 }
 
+@misc{mandrini2021simulated,
+  title        = {Simulated dataset of corn response to Nitrogen over thousands of fields and multiple years in Illinois},
+  author       = {Mandrini, German and Archontoulis, Sotirios and Pittelkow, Cameron and Mieno, Taro and Martin, Nicolas},
+  year         = {2021},
+  howpublished = {Mendeley Data, V1},
+  doi          = {10.17632/xs5nbm4w55.1},
+  publisher    = {Elsevier},
+  note         = {Dataset},
+}
+
 @article{nafziger2022mrtn,
   title={The MRTN approach to making nitrogen rate recommendations: Background and implementation},
   author={Nafziger, Emerson and Sawyer, John and Laboski, Carrie and Franzen, David},
@@ -678,4 +688,80 @@
   author={Wood, Simon N},
   year={2017},
   publisher={Chapman and Hall/CRC}
+}
+
+
+@incollection{Nafziger_IAH_N,
+  author       = {Nafziger, Emerson},
+  title        = {Nitrogen Management for Corn},
+  booktitle    = {Illinois Agronomy Handbook},
+  publisher    = {University of Illinois Extension},
+  address      = {Urbana, IL},
+  year         = {2020},
+  note         = {Chapter 9, Illinois Agronomy Handbook, online PDF},
+  url          = {https://extension.illinois.edu/sites/default/files/iah_-_nitrogen_management_for_corn_v4.pdf},
+  urldate      = {2025-12-01}
+}
+
+@techreport{SawyerEtAl2006_MRTN,
+  author       = {Sawyer, John and Nafziger, Emerson and Randall, Gyles and Bundy, Larry and Rehm, George and Joern, Brad},
+  title        = {Concepts and Rationale for Regional Nitrogen Rate Guidelines for Corn},
+  institution  = {Iowa State University Extension},
+  number       = {PM 2015},
+  address      = {Ames, IA},
+  year         = {2006},
+  url          = {https://www.cornnratecalc.org/files/PM2015.pdf},
+  urldate      = {2025-12-01}
+}
+
+@article{Nafziger2019_ManagingN,
+  author       = {Nafziger, Emerson},
+  title        = {Managing Nitrogen for Corn in 2019},
+  journal      = {farmdoc daily},
+  volume       = {9},
+  number       = {56},
+  year         = {2019},
+  month        = mar,
+  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
+  url          = {https://farmdocdaily.illinois.edu/2019/03/managing-nitrogen-for-corn-in-2019.html},
+  urldate      = {2025-12-01}
+}
+
+@article{SchnitkeyGentry2019_LoweringN,
+  author       = {Schnitkey, Gary and Gentry, Laura},
+  title        = {The Economic Advisability of Lowering 2019 Nitrogen Application Rates on Corn},
+  journal      = {farmdoc daily},
+  volume       = {9},
+  number       = {48},
+  year         = {2019},
+  month        = mar,
+  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
+  url          = {https://farmdocdaily.illinois.edu/2019/03/the-economic-advisability-of-lowering-2019-nitrogen-application-rates-on-corn.html},
+  urldate      = {2025-12-01}
+}
+
+@article{SchnitkeyEtAl2022_FertRates,
+  author       = {Schnitkey, Gary and Paulson, Nick and Swanson, Kyle and Zulauf, Carl and Coppess, Jonathan and Baltz, Joe},
+  title        = {Fertilizer Prices, Rates, and Costs for 2023},
+  journal      = {farmdoc daily},
+  volume       = {12},
+  number       = {143},
+  year         = {2022},
+  month        = sep,
+  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
+  url          = {https://farmdocdaily.illinois.edu/2022/09/fertilizer-prices-rates-and-costs-for-2023.html},
+  urldate      = {2025-12-01}
+}
+
+@article{LiuJanzen2023_NRatesIL,
+  author       = {Liu, Menglin and Janzen, Joe},
+  title        = {How Did Corn Farmers Adjust Nitrogen Application Rates in Illinois in 2022?},
+  journal      = {farmdoc daily},
+  volume       = {13},
+  number       = {235},
+  year         = {2023},
+  month        = dec,
+  publisher    = {Department of Agricultural and Consumer Economics, University of Illinois at Urbana-Champaign},
+  url          = {https://farmdocdaily.illinois.edu/2023/12/how-did-corn-farmers-adjust-nitrogen-application-rates-in-illinois-in-2022.html},
+  urldate      = {2025-12-01}
 }
