add book update

--- a/book/value_refs.bib
+++ b/book/value_refs.bib
@@ -765,3 +765,31 @@
   url          = {https://farmdocdaily.illinois.edu/2023/12/how-did-corn-farmers-adjust-nitrogen-application-rates-in-illinois-in-2022.html},
   urldate      = {2025-12-01}
 }
+
+@article{bullock2019data,
+  title={Data-intensive farm management for precision agriculture},
+  author={Bullock, DS and et al.},
+  journal={Applied Economic Perspectives and Policy},
+  year={2019}
+}
+
+@article{de2023predicting,
+  title={Predicting yield response from on-farm trials},
+  author={de Jong, et al.},
+  journal={Agricultural Systems},
+  year={2023}
+}
+
+@article{holzworth2014apsim,
+  title={APSIM—Evolution towards a new generation of agricultural systems simulation},
+  author={Holzworth, David P and et al.},
+  journal={Environmental Modelling \& Software},
+  year={2014}
+}
+
+@article{jaynes1957information,
+  title={Information theory and statistical mechanics},
+  author={Jaynes, Edwin T},
+  journal={Physical Review},
+  year={1957}
+}
